--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ html {
     scroll-behavior: smooth;
 }
 
+#message {
+    position: sticky;
+    top: 0;
+    color: #ffc0cb;
+    text-align: center;
+    background-color: #000;
+    /* padding: 10px 0; */
+    margin: 0 1em;
+    border: 1px solid #fffafa30;
+}
+
 #top {
     color: #fff;
     position: sticky;
