--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header {
     width: 80;
     height: 80px; 
     background-color: #fffafa; 
-    box-shadow: 0px 0px 1px 1px #fffafa;
+    box-shadow: 0px 0px 15px 2px #000;
     border-radius: 50%;  
 }
 
