--- a/style.css
+++ b/style.css
@@ -183,22 +183,16 @@ li a:visited {
     color: #daa520; 
 }
 
-
-/* #demo-passage {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 300px;
-    background-color: #000;
-} */
-/* #that {
-    height: 100px;
-    width: 600px;
-    background-color: #ffffff17;
-} */
-
+.info {
+    width: 290px; 
+    background-color: rgba(0, 128, 0, 0.185); 
+    padding: 5px 0; 
+    text-align: center; 
+    border-radius: 5px;
+     margin: 10px 10px 10px auto; 
+     float: right;  position: sticky; 
+     top: 0;
+}
 /* main */
 main {
     display: block;
@@ -356,7 +350,6 @@ footer {
     padding: 5rem;
     gap: 30px; 
     background-color: #000;
-    color: lig
 }
 .contentInfo-wrapper {
     display: flex;
@@ -418,6 +411,7 @@ footer img {
      /*(360px to 599px devices)*/    
      @media screen and (max-width: 900px) {
         body {
+            position: relative;
             width: 100%;
         }
 
@@ -429,6 +423,16 @@ footer img {
             width: 200px;
         }
 
+        .info {
+            display: block;
+            color: green;
+            position: absolute;
+            top: 13em;
+            /* all: unset; */
+           
+            background-color: #fff;
+            margin: auto auto auto 40px;
+        }
 
         .classification-wrapper {
             width: 100%;
